Added events and intents to MainActivity.kt, HelpActivity.kt, and added new AuthActivity with events and intents that lead to SurveyActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="phoneEntryTip">Enter your phone number</string>
     <string name="signInButton">Sign In/Up</string>
     <string name="learnMore">Press to learn more…</string>
+    <string name="code_sent">We sent a code to</string>
+    <string name="here_auth_code">Here is your authentication code:</string>
 
     <!-- Survey -->
     <string name="greeting">Hello! What\'s your first name?</string>
@@ -31,5 +33,7 @@
     <string name="why_we_need_your_phone_number">We take your privacy very seriously at ICHarmony. Your phone number is only used to identify you as a user. Upon providing a cell phone number which you have access to, a code will be sent via SMS to authenticate that you have access to that number.</string>
     <string name="preferences">Preferences</string>
     <string name="preferences_description">Within preferences you can embrace the dark side with "Night Mode," modify your user profile, and view your previously answered questions and choose to re-answer them if you wish.</string>
+    <string name="enter_code_here">Enter code here</string>
+
 
 </resources>
