--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,10 @@
     <string name="preferences">Preferences</string>
     <string name="preferences_description">Within preferences you can embrace the dark side with "Night Mode," modify your user profile, and view your previously answered questions and choose to re-answer them if you wish.</string>
     <string name="enter_code_here">Enter code here</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="settings_desc">Settings</string>
+    <string name="theme">Theme</string>
 
 
 </resources>
